--- a/404.html
+++ b/404.html
@@ -2,6 +2,5 @@
     let path = location.pathname
     localStorage.setItem('path', path)
 
-    window.location.href = 'https://aparstechteam.github.io/revisionplan'
-
+    window.location.href = 'https://aparstechteam.github.io/RevisionPlan'
 </script>
