--- a/404.html
+++ b/404.html
@@ -2,5 +2,5 @@
     let path = location.pathname
     localStorage.setItem('path', path)
 
-    window.location.href = 'https://aparstechteam.github.io/RevisionPlan'
+    window.location.href = 'https://aparstechteam.github.io/RevisionPlan/'
 </script>
