--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <script>
-    let path = location.pathname
-    localStorage.setItem('path', path.replace('/RevisionPlan',''))
+  let path = location.pathname;
+  localStorage.setItem("path", path.replace("/RevisionPlan", ""));
 
-    window.location.href = 'https://aparstechteam.github.io/RevisionPlan/'
+  window.location.href = "https://aparstechteam.github.io/RevisionPlan/";
 </script>
