--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <script>
-  let path = location.pathname;
+  const path = location.pathname;
   localStorage.setItem("path", path.replace("/RevisionPlan", ""));
 
   window.location.href = "https://apars.tech/RevisionPlan/";
